# Project---Wednesday

./: README.md  pyproject.toml
configs/: default.yaml
personalities/: wednesday.json
src/wednesday/: __init__.py  app.py  conversation.py  emotion.py  goals.py  memory.py  personality.py  vector_store.py
tests/: test_conversation.py  test_memory.py  test_personality.py
