[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wednesday-api"
version = "0.1.0"
description = "Artificial Personality Intelligence framework for Wednesday"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
